# GridNotes

./: App.xaml  App.xaml.cs  CMakeLists.txt  Debouncer.cs  GridNotes.csproj  MainWindow.cs.txt  MainWindow.xaml  MainWindow.xaml.cs.txt  README.md  WindowsPlayer.cs
src/: main.cpp  main.txt  startup.cpp  startup.h
versione_in_C_SHARP/: MainWindow.txt  MainWindow.xaml.cs  Models.cs  Startup.cs  Storage.cs
